add changed db property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Voting
+spring.datasource.url=jdbc:postgresql://localhost:5432/voting
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
